parser.output
   0  $accept : %entry% $end

   1  prog : block EOF
   2       | proc_list block EOF

   3  proc_list : proc
   4            | proc_list proc

   5  proc : FUNC NAME LBRACE param RBRACE types block
   6       | FUNC NAME LBRACE RBRACE types block
   7       | FUNC NAME LBRACE param RBRACE block
   8       | FUNC NAME LBRACE RBRACE block

   9  param : vars types
  10        | param COMMA vars types

  11  block : LBRACE statement RBRACE

  12  statement : statement SEMICOLON statement
  13            | GO block
  14            | VARS LANGLE DASH aexp
  15            | LANGLE DASH VARS
  16            | VARS COLON EQUAL bexp
  17            | VARS COLON EQUAL NEWCHANNEL
  18            | VARS EQUAL bexp
  19            | WHILE bexp block
  20            | IF bexp block ELSE block
  21            | RETURN
  22            | NAME LPAREN arg RPAREN
  23            | NAME LPAREN RPAREN
  24            | PRINT bexp
  25            |

  26  bexp : cexp AMP AMP cexp
  27       | cexp

  28  cexp : cterm EQUAL EQUAL cterm
  29       | cterm

  30  cterm : aexp RANGLE aexp
  31        | aexp

  32  aexp : term PLUS aexp
  33       | term MINUS aexp
  34       | term

  35  term : factor TIMES term
  36       | factor DIVIDE term
  37       | factor

  38  factor : ints
  39         | bools
  40         | vars
  41         | LANGLE DASH VARS
  42         | EXCLAIM factor
  43         | LPAREN bexp RPAREN
  44         | NAME LPAREN arg RPAREN

  45  arg : bexp
  46      | arg COMMA bexp

  47  ints : INT

  48  bools : TRUE
  49        | FALSE

  50  vars : VARS

  51  types : INT_TYPE
  52        | BOOL_TYPE
  53        | CHANNEL_TYPE

  54  %entry% : '\001' prog

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . prog  (54)

	LBRACE  shift 3
	FUNC  shift 4
	.  error

	prog  goto 5
	block  goto 6
	proc_list  goto 7
	proc  goto 8


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	block : LBRACE . statement RBRACE  (11)
	statement : .  (25)

	NAME  shift 9
	VARS  shift 10
	LANGLE  shift 11
	GO  shift 12
	IF  shift 13
	RETURN  shift 14
	WHILE  shift 15
	PRINT  shift 16
	SEMICOLON  reduce 25
	RBRACE  reduce 25

	statement  goto 17


state 4
	proc : FUNC . NAME LBRACE param RBRACE types block  (5)
	proc : FUNC . NAME LBRACE RBRACE types block  (6)
	proc : FUNC . NAME LBRACE param RBRACE block  (7)
	proc : FUNC . NAME LBRACE RBRACE block  (8)

	NAME  shift 18
	.  error


state 5
	%entry% : '\001' prog .  (54)

	.  reduce 54


state 6
	prog : block . EOF  (1)

	EOF  shift 19
	.  error


state 7
	prog : proc_list . block EOF  (2)
	proc_list : proc_list . proc  (4)

	LBRACE  shift 3
	FUNC  shift 4
	.  error

	block  goto 20
	proc  goto 21


state 8
	proc_list : proc .  (3)

	.  reduce 3


state 9
	statement : NAME . LPAREN arg RPAREN  (22)
	statement : NAME . LPAREN RPAREN  (23)

	LPAREN  shift 22
	.  error


state 10
	statement : VARS . LANGLE DASH aexp  (14)
	statement : VARS . COLON EQUAL bexp  (16)
	statement : VARS . COLON EQUAL NEWCHANNEL  (17)
	statement : VARS . EQUAL bexp  (18)

	EQUAL  shift 23
	COLON  shift 24
	LANGLE  shift 25
	.  error


state 11
	statement : LANGLE . DASH VARS  (15)

	DASH  shift 26
	.  error


state 12
	statement : GO . block  (13)

	LBRACE  shift 3
	.  error

	block  goto 27


state 13
	statement : IF . bexp block ELSE block  (20)

	NAME  shift 28
	VARS  shift 29
	INT  shift 30
	TRUE  shift 31
	FALSE  shift 32
	LANGLE  shift 33
	EXCLAIM  shift 34
	LPAREN  shift 35
	.  error

	vars  goto 36
	aexp  goto 37
	bexp  goto 38
	cexp  goto 39
	cterm  goto 40
	term  goto 41
	factor  goto 42
	ints  goto 43
	bools  goto 44


state 14
	statement : RETURN .  (21)

	.  reduce 21


state 15
	statement : WHILE . bexp block  (19)

	NAME  shift 28
	VARS  shift 29
	INT  shift 30
	TRUE  shift 31
	FALSE  shift 32
	LANGLE  shift 33
	EXCLAIM  shift 34
	LPAREN  shift 35
	.  error

	vars  goto 36
	aexp  goto 37
	bexp  goto 45
	cexp  goto 39
	cterm  goto 40
	term  goto 41
	factor  goto 42
	ints  goto 43
	bools  goto 44


state 16
	statement : PRINT . bexp  (24)

	NAME  shift 28
	VARS  shift 29
	INT  shift 30
	TRUE  shift 31
	FALSE  shift 32
	LANGLE  shift 33
	EXCLAIM  shift 34
	LPAREN  shift 35
	.  error

	vars  goto 36
	aexp  goto 37
	bexp  goto 46
	cexp  goto 39
	cterm  goto 40
	term  goto 41
	factor  goto 42
	ints  goto 43
	bools  goto 44


state 17
	block : LBRACE statement . RBRACE  (11)
	statement : statement . SEMICOLON statement  (12)

	SEMICOLON  shift 47
	RBRACE  shift 48
	.  error


state 18
	proc : FUNC NAME . LBRACE param RBRACE types block  (5)
	proc : FUNC NAME . LBRACE RBRACE types block  (6)
	proc : FUNC NAME . LBRACE param RBRACE block  (7)
	proc : FUNC NAME . LBRACE RBRACE block  (8)

	LBRACE  shift 49
	.  error


state 19
	prog : block EOF .  (1)

	.  reduce 1


state 20
	prog : proc_list block . EOF  (2)

	EOF  shift 50
	.  error


state 21
	proc_list : proc_list proc .  (4)

	.  reduce 4


state 22
	statement : NAME LPAREN . arg RPAREN  (22)
	statement : NAME LPAREN . RPAREN  (23)

	NAME  shift 28
	VARS  shift 29
	INT  shift 30
	TRUE  shift 31
	FALSE  shift 32
	LANGLE  shift 33
	EXCLAIM  shift 34
	LPAREN  shift 35
	RPAREN  shift 51
	.  error

	vars  goto 36
	aexp  goto 37
	bexp  goto 52
	arg  goto 53
	cexp  goto 39
	cterm  goto 40
	term  goto 41
	factor  goto 42
	ints  goto 43
	bools  goto 44


state 23
	statement : VARS EQUAL . bexp  (18)

	NAME  shift 28
	VARS  shift 29
	INT  shift 30
	TRUE  shift 31
	FALSE  shift 32
	LANGLE  shift 33
	EXCLAIM  shift 34
	LPAREN  shift 35
	.  error

	vars  goto 36
	aexp  goto 37
	bexp  goto 54
	cexp  goto 39
	cterm  goto 40
	term  goto 41
	factor  goto 42
	ints  goto 43
	bools  goto 44


state 24
	statement : VARS COLON . EQUAL bexp  (16)
	statement : VARS COLON . EQUAL NEWCHANNEL  (17)

	EQUAL  shift 55
	.  error


state 25
	statement : VARS LANGLE . DASH aexp  (14)

	DASH  shift 56
	.  error


state 26
	statement : LANGLE DASH . VARS  (15)

	VARS  shift 57
	.  error


state 27
	statement : GO block .  (13)

	.  reduce 13


state 28
	factor : NAME . LPAREN arg RPAREN  (44)

	LPAREN  shift 58
	.  error


state 29
	vars : VARS .  (50)

	.  reduce 50


state 30
	ints : INT .  (47)

	.  reduce 47


state 31
	bools : TRUE .  (48)

	.  reduce 48


state 32
	bools : FALSE .  (49)

	.  reduce 49


state 33
	factor : LANGLE . DASH VARS  (41)

	DASH  shift 59
	.  error


state 34
	factor : EXCLAIM . factor  (42)

	NAME  shift 28
	VARS  shift 29
	INT  shift 30
	TRUE  shift 31
	FALSE  shift 32
	LANGLE  shift 33
	EXCLAIM  shift 34
	LPAREN  shift 35
	.  error

	vars  goto 36
	factor  goto 60
	ints  goto 43
	bools  goto 44


state 35
	factor : LPAREN . bexp RPAREN  (43)

	NAME  shift 28
	VARS  shift 29
	INT  shift 30
	TRUE  shift 31
	FALSE  shift 32
	LANGLE  shift 33
	EXCLAIM  shift 34
	LPAREN  shift 35
	.  error

	vars  goto 36
	aexp  goto 37
	bexp  goto 61
	cexp  goto 39
	cterm  goto 40
	term  goto 41
	factor  goto 42
	ints  goto 43
	bools  goto 44


state 36
	factor : vars .  (40)

	.  reduce 40


state 37
	cterm : aexp . RANGLE aexp  (30)
	cterm : aexp .  (31)

	RANGLE  shift 62
	EQUAL  reduce 31
	AMP  reduce 31
	SEMICOLON  reduce 31
	COMMA  reduce 31
	RPAREN  reduce 31
	LBRACE  reduce 31
	RBRACE  reduce 31


state 38
	statement : IF bexp . block ELSE block  (20)

	LBRACE  shift 3
	.  error

	block  goto 63


state 39
	bexp : cexp . AMP AMP cexp  (26)
	bexp : cexp .  (27)

	AMP  shift 64
	SEMICOLON  reduce 27
	COMMA  reduce 27
	RPAREN  reduce 27
	LBRACE  reduce 27
	RBRACE  reduce 27


state 40
	cexp : cterm . EQUAL EQUAL cterm  (28)
	cexp : cterm .  (29)

	EQUAL  shift 65
	AMP  reduce 29
	SEMICOLON  reduce 29
	COMMA  reduce 29
	RPAREN  reduce 29
	LBRACE  reduce 29
	RBRACE  reduce 29


state 41
	aexp : term . PLUS aexp  (32)
	aexp : term . MINUS aexp  (33)
	aexp : term .  (34)

	PLUS  shift 66
	MINUS  shift 67
	EQUAL  reduce 34
	AMP  reduce 34
	SEMICOLON  reduce 34
	RANGLE  reduce 34
	COMMA  reduce 34
	RPAREN  reduce 34
	LBRACE  reduce 34
	RBRACE  reduce 34


state 42
	term : factor . TIMES term  (35)
	term : factor . DIVIDE term  (36)
	term : factor .  (37)

	DIVIDE  shift 68
	TIMES  shift 69
	PLUS  reduce 37
	MINUS  reduce 37
	EQUAL  reduce 37
	AMP  reduce 37
	SEMICOLON  reduce 37
	RANGLE  reduce 37
	COMMA  reduce 37
	RPAREN  reduce 37
	LBRACE  reduce 37
	RBRACE  reduce 37


state 43
	factor : ints .  (38)

	.  reduce 38


state 44
	factor : bools .  (39)

	.  reduce 39


state 45
	statement : WHILE bexp . block  (19)

	LBRACE  shift 3
	.  error

	block  goto 70


state 46
	statement : PRINT bexp .  (24)

	.  reduce 24


state 47
	statement : statement SEMICOLON . statement  (12)
	statement : .  (25)

	NAME  shift 9
	VARS  shift 10
	LANGLE  shift 11
	GO  shift 12
	IF  shift 13
	RETURN  shift 14
	WHILE  shift 15
	PRINT  shift 16
	SEMICOLON  reduce 25
	RBRACE  reduce 25

	statement  goto 71


state 48
	block : LBRACE statement RBRACE .  (11)

	.  reduce 11


state 49
	proc : FUNC NAME LBRACE . param RBRACE types block  (5)
	proc : FUNC NAME LBRACE . RBRACE types block  (6)
	proc : FUNC NAME LBRACE . param RBRACE block  (7)
	proc : FUNC NAME LBRACE . RBRACE block  (8)

	VARS  shift 29
	RBRACE  shift 72
	.  error

	param  goto 73
	vars  goto 74


state 50
	prog : proc_list block EOF .  (2)

	.  reduce 2


state 51
	statement : NAME LPAREN RPAREN .  (23)

	.  reduce 23


state 52
	arg : bexp .  (45)

	.  reduce 45


state 53
	statement : NAME LPAREN arg . RPAREN  (22)
	arg : arg . COMMA bexp  (46)

	COMMA  shift 75
	RPAREN  shift 76
	.  error


state 54
	statement : VARS EQUAL bexp .  (18)

	.  reduce 18


state 55
	statement : VARS COLON EQUAL . bexp  (16)
	statement : VARS COLON EQUAL . NEWCHANNEL  (17)

	NAME  shift 28
	VARS  shift 29
	INT  shift 30
	TRUE  shift 31
	FALSE  shift 32
	LANGLE  shift 33
	EXCLAIM  shift 34
	LPAREN  shift 35
	NEWCHANNEL  shift 77
	.  error

	vars  goto 36
	aexp  goto 37
	bexp  goto 78
	cexp  goto 39
	cterm  goto 40
	term  goto 41
	factor  goto 42
	ints  goto 43
	bools  goto 44


state 56
	statement : VARS LANGLE DASH . aexp  (14)

	NAME  shift 28
	VARS  shift 29
	INT  shift 30
	TRUE  shift 31
	FALSE  shift 32
	LANGLE  shift 33
	EXCLAIM  shift 34
	LPAREN  shift 35
	.  error

	vars  goto 36
	aexp  goto 79
	term  goto 41
	factor  goto 42
	ints  goto 43
	bools  goto 44


state 57
	statement : LANGLE DASH VARS .  (15)

	.  reduce 15


state 58
	factor : NAME LPAREN . arg RPAREN  (44)

	NAME  shift 28
	VARS  shift 29
	INT  shift 30
	TRUE  shift 31
	FALSE  shift 32
	LANGLE  shift 33
	EXCLAIM  shift 34
	LPAREN  shift 35
	.  error

	vars  goto 36
	aexp  goto 37
	bexp  goto 52
	arg  goto 80
	cexp  goto 39
	cterm  goto 40
	term  goto 41
	factor  goto 42
	ints  goto 43
	bools  goto 44


state 59
	factor : LANGLE DASH . VARS  (41)

	VARS  shift 81
	.  error


state 60
	factor : EXCLAIM factor .  (42)

	.  reduce 42


state 61
	factor : LPAREN bexp . RPAREN  (43)

	RPAREN  shift 82
	.  error


state 62
	cterm : aexp RANGLE . aexp  (30)

	NAME  shift 28
	VARS  shift 29
	INT  shift 30
	TRUE  shift 31
	FALSE  shift 32
	LANGLE  shift 33
	EXCLAIM  shift 34
	LPAREN  shift 35
	.  error

	vars  goto 36
	aexp  goto 83
	term  goto 41
	factor  goto 42
	ints  goto 43
	bools  goto 44


state 63
	statement : IF bexp block . ELSE block  (20)

	ELSE  shift 84
	.  error


state 64
	bexp : cexp AMP . AMP cexp  (26)

	AMP  shift 85
	.  error


state 65
	cexp : cterm EQUAL . EQUAL cterm  (28)

	EQUAL  shift 86
	.  error


state 66
	aexp : term PLUS . aexp  (32)

	NAME  shift 28
	VARS  shift 29
	INT  shift 30
	TRUE  shift 31
	FALSE  shift 32
	LANGLE  shift 33
	EXCLAIM  shift 34
	LPAREN  shift 35
	.  error

	vars  goto 36
	aexp  goto 87
	term  goto 41
	factor  goto 42
	ints  goto 43
	bools  goto 44


state 67
	aexp : term MINUS . aexp  (33)

	NAME  shift 28
	VARS  shift 29
	INT  shift 30
	TRUE  shift 31
	FALSE  shift 32
	LANGLE  shift 33
	EXCLAIM  shift 34
	LPAREN  shift 35
	.  error

	vars  goto 36
	aexp  goto 88
	term  goto 41
	factor  goto 42
	ints  goto 43
	bools  goto 44


state 68
	term : factor DIVIDE . term  (36)

	NAME  shift 28
	VARS  shift 29
	INT  shift 30
	TRUE  shift 31
	FALSE  shift 32
	LANGLE  shift 33
	EXCLAIM  shift 34
	LPAREN  shift 35
	.  error

	vars  goto 36
	term  goto 89
	factor  goto 42
	ints  goto 43
	bools  goto 44


state 69
	term : factor TIMES . term  (35)

	NAME  shift 28
	VARS  shift 29
	INT  shift 30
	TRUE  shift 31
	FALSE  shift 32
	LANGLE  shift 33
	EXCLAIM  shift 34
	LPAREN  shift 35
	.  error

	vars  goto 36
	term  goto 90
	factor  goto 42
	ints  goto 43
	bools  goto 44


state 70
	statement : WHILE bexp block .  (19)

	.  reduce 19


71: shift/reduce conflict (shift 47, reduce 12) on SEMICOLON
state 71
	statement : statement . SEMICOLON statement  (12)
	statement : statement SEMICOLON statement .  (12)

	SEMICOLON  shift 47
	RBRACE  reduce 12


state 72
	proc : FUNC NAME LBRACE RBRACE . types block  (6)
	proc : FUNC NAME LBRACE RBRACE . block  (8)

	LBRACE  shift 3
	INT_TYPE  shift 91
	BOOL_TYPE  shift 92
	CHANNEL_TYPE  shift 93
	.  error

	block  goto 94
	types  goto 95


state 73
	proc : FUNC NAME LBRACE param . RBRACE types block  (5)
	proc : FUNC NAME LBRACE param . RBRACE block  (7)
	param : param . COMMA vars types  (10)

	COMMA  shift 96
	RBRACE  shift 97
	.  error


state 74
	param : vars . types  (9)

	INT_TYPE  shift 91
	BOOL_TYPE  shift 92
	CHANNEL_TYPE  shift 93
	.  error

	types  goto 98


state 75
	arg : arg COMMA . bexp  (46)

	NAME  shift 28
	VARS  shift 29
	INT  shift 30
	TRUE  shift 31
	FALSE  shift 32
	LANGLE  shift 33
	EXCLAIM  shift 34
	LPAREN  shift 35
	.  error

	vars  goto 36
	aexp  goto 37
	bexp  goto 99
	cexp  goto 39
	cterm  goto 40
	term  goto 41
	factor  goto 42
	ints  goto 43
	bools  goto 44


state 76
	statement : NAME LPAREN arg RPAREN .  (22)

	.  reduce 22


state 77
	statement : VARS COLON EQUAL NEWCHANNEL .  (17)

	.  reduce 17


state 78
	statement : VARS COLON EQUAL bexp .  (16)

	.  reduce 16


state 79
	statement : VARS LANGLE DASH aexp .  (14)

	.  reduce 14


state 80
	factor : NAME LPAREN arg . RPAREN  (44)
	arg : arg . COMMA bexp  (46)

	COMMA  shift 75
	RPAREN  shift 100
	.  error


state 81
	factor : LANGLE DASH VARS .  (41)

	.  reduce 41


state 82
	factor : LPAREN bexp RPAREN .  (43)

	.  reduce 43


state 83
	cterm : aexp RANGLE aexp .  (30)

	.  reduce 30


state 84
	statement : IF bexp block ELSE . block  (20)

	LBRACE  shift 3
	.  error

	block  goto 101


state 85
	bexp : cexp AMP AMP . cexp  (26)

	NAME  shift 28
	VARS  shift 29
	INT  shift 30
	TRUE  shift 31
	FALSE  shift 32
	LANGLE  shift 33
	EXCLAIM  shift 34
	LPAREN  shift 35
	.  error

	vars  goto 36
	aexp  goto 37
	cexp  goto 102
	cterm  goto 40
	term  goto 41
	factor  goto 42
	ints  goto 43
	bools  goto 44


state 86
	cexp : cterm EQUAL EQUAL . cterm  (28)

	NAME  shift 28
	VARS  shift 29
	INT  shift 30
	TRUE  shift 31
	FALSE  shift 32
	LANGLE  shift 33
	EXCLAIM  shift 34
	LPAREN  shift 35
	.  error

	vars  goto 36
	aexp  goto 37
	cterm  goto 103
	term  goto 41
	factor  goto 42
	ints  goto 43
	bools  goto 44


state 87
	aexp : term PLUS aexp .  (32)

	.  reduce 32


state 88
	aexp : term MINUS aexp .  (33)

	.  reduce 33


state 89
	term : factor DIVIDE term .  (36)

	.  reduce 36


state 90
	term : factor TIMES term .  (35)

	.  reduce 35


state 91
	types : INT_TYPE .  (51)

	.  reduce 51


state 92
	types : BOOL_TYPE .  (52)

	.  reduce 52


state 93
	types : CHANNEL_TYPE .  (53)

	.  reduce 53


state 94
	proc : FUNC NAME LBRACE RBRACE block .  (8)

	.  reduce 8


state 95
	proc : FUNC NAME LBRACE RBRACE types . block  (6)

	LBRACE  shift 3
	.  error

	block  goto 104


state 96
	param : param COMMA . vars types  (10)

	VARS  shift 29
	.  error

	vars  goto 105


state 97
	proc : FUNC NAME LBRACE param RBRACE . types block  (5)
	proc : FUNC NAME LBRACE param RBRACE . block  (7)

	LBRACE  shift 3
	INT_TYPE  shift 91
	BOOL_TYPE  shift 92
	CHANNEL_TYPE  shift 93
	.  error

	block  goto 106
	types  goto 107


state 98
	param : vars types .  (9)

	.  reduce 9


state 99
	arg : arg COMMA bexp .  (46)

	.  reduce 46


state 100
	factor : NAME LPAREN arg RPAREN .  (44)

	.  reduce 44


state 101
	statement : IF bexp block ELSE block .  (20)

	.  reduce 20


state 102
	bexp : cexp AMP AMP cexp .  (26)

	.  reduce 26


state 103
	cexp : cterm EQUAL EQUAL cterm .  (28)

	.  reduce 28


state 104
	proc : FUNC NAME LBRACE RBRACE types block .  (6)

	.  reduce 6


state 105
	param : param COMMA vars . types  (10)

	INT_TYPE  shift 91
	BOOL_TYPE  shift 92
	CHANNEL_TYPE  shift 93
	.  error

	types  goto 108


state 106
	proc : FUNC NAME LBRACE param RBRACE block .  (7)

	.  reduce 7


state 107
	proc : FUNC NAME LBRACE param RBRACE types . block  (5)

	LBRACE  shift 3
	.  error

	block  goto 109


state 108
	param : param COMMA vars types .  (10)

	.  reduce 10


state 109
	proc : FUNC NAME LBRACE param RBRACE types block .  (5)

	.  reduce 5


State 71 contains 1 shift/reduce conflict.


39 terminals, 19 nonterminals
55 grammar rules, 110 states
